# Cpp_Marathon

sprint00/: .gitignore
sprint00/t00/: CMakeLists.txt  helloTamriel.cpp
sprint00/t01/: printDialog.cpp  printDialog.h
sprint00/t02/: walletManager.cpp  walletManager.h
sprint00/t03/: castSpells.cpp  castSpells.h
sprint00/t04/: referenceOrPointer.cpp  referenceOrPointer.h
sprint00/t05/: CMakeLists.txt  main.cpp
sprint00/t06/: CMakeLists.txt  main.cpp  meadSong.cpp  meadSong.h
sprint00/t07/: CMakeLists.txt  main.cpp
sprint00/t07/src/: CMakeLists.txt  inventory.cpp  inventory.h
sprint01/t02/: CMakeLists.txt  main.cpp
sprint01/t02/src/: libsrc.cpp  libsrc.h
sprint01/t03/: CMakeLists.txt  main.cpp
sprint01/t03/src/: libsrc.cpp  libsrc.h
sprint01/t04/: CMakeLists.txt  main.cpp
sprint01/t04/src/: CMakeLists.txt  libsrc.cpp  libsrc.h
sprint01/t05/: CMakeLists.txt  main.cpp
sprint01/t05/src/: CMakeLists.txt  libsrc.cpp  libsrc.h
sprint02/t00/: CMakeLists.txt  main.cpp
sprint02/t00/src/: CMakeLists.txt  libsrc.cpp  libsrc.h
sprint02/t01/: CMakeLists.txt  main.cpp
sprint02/t01/src/: CMakeLists.txt  libsrc.cpp  libsrc.h
sprint02/t02/: CMakeLists.txt  main.cpp
sprint02/t02/src/: CMakeLists.txt  libsrc.cpp  libsrc.h
sprint02/t03/: CMakeLists.txt  main.cpp
sprint02/t03/src/: CMakeLists.txt  libsrc.cpp  libsrc.h
sprint03/t00/: templateAddition.h
sprint03/t01/: outputAny.h
sprint03/t02/: sumOfArguments.h
sprint03/t03/: sumFileData.h
sprint03/t04/: outputContainer.h
sprint03/t05/: squareValue.h
sprint03/t06/: isPalindrome.h
sprint03/t07/: sortValues.h
sprint04/t00/utils/: algorithmUtils.h
sprint04/t01/utils/: CMakeLists.txt  algorithmUtils.h
sprint04/t02/utils/: algorithmUtils.h
sprint04/t03/utils/: algorithmUtils.h
